@@ -1,2 +1,0 @@
-AnyObjectId[680f8c60c1f0393f7e56595e24b29b3ceb46e933] was removed in git history.
-Apache SVN contains full history.
