@@ -1,2 +1,0 @@
-AnyObjectId[552721d0e8deb28f2909cfc5ec900a5e35736795] was removed in git history.
-Apache SVN contains full history.
