@@ -1,2 +1,0 @@
-AnyObjectId[b73a80fab641131e6fbe3ae833549efb3c540d17] was removed in git history.
-Apache SVN contains full history.
