@@ -1,2 +1,0 @@
-AnyObjectId[c9030febd2ae484532407db9ef98247cbe61b779] was removed in git history.
-Apache SVN contains full history.
