@@ -1,2 +1,0 @@
-AnyObjectId[0e3279b961c07d4d4ed909dade956aacfbf1e785] was removed in git history.
-Apache SVN contains full history.
