@@ -1,2 +1,0 @@
-AnyObjectId[6877c97853cafab42e5c0a88f3b39b6cd31165ca] was removed in git history.
-Apache SVN contains full history.
